# Emsc-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Main/: CMakeLists.txt
Main/src/: main.cxx
MyLib/: CMakeLists.txt
MyLib/include/: Hello.h  common.h
MyLib/src/: Hello.cxx  common.cxx
doc/: README.md  readme-emscripten.sh
